test_suite/tests/ui/unsupported/union_ser.stderr
error: Serde does not support derive for unions
 --> tests/ui/unsupported/union_ser.rs:4:1
  |
4 | / union Union {
5 | |     x: u8,
6 | |     y: (),
7 | | }
  | |_^
